[package]
name = "expand-t-co"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = { version = "1.4.1", default-features = false, features = ["std", "perf"] }
ureq = { version = "1.5.0", default-features = false, features = ["tls"] }